# vec2art

./: .deployment-trigger  .gitattributes  .gitignore  .prettierignore  CENTERLINE-SETTINGS-TODO.md  CLAUDE.md  COMMIT-MESSAGES.md  CONFIG-REFACTOR-PLAN.md  CONVERTER-IMPROVEMENT-PHASES.md  CONVERTER_DEBUGGING.md  COPYRIGHT  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  LICENSE  NOTICE  PARAMETER-BINDING-IMPLEMENTATION-PLAN.md  PHASE-1-COMPLETION.md  PHASE-2-PLAN.md  PHASE-3-COMPLETION-SUMMARY.md  PHASE-3-PLAN.md  README.md  SUPERPIXEL-ANALYSIS.md  TODO.md  VERCEL_404_DEBUG.md  WASM Image to SVG Optimization_.md  WASM-REBUILD-README.md  converter-settings-test-matrix.md  edge_tracing_detail_inversion_troubleshoot.md  package-lock.json  package.json  phase_b_module_structure.md  phase_b_refinement_research_plan.md  rebuild-wasm.bat  rebuild-wasm.sh  superpixel-artifact-investigation.md  test-results-smoke-test.md  vec2art-pihhk5on2-joshua-mcdonalds-projects.vercel.app__app_immutable_workers_wasm-processor.worker-Pcd9_6tI.js_Archive [25-09-14 02-40-45].har  vec2art-wasm-apple-debug-report.md  vercel-build.sh  vercel.json  (+1 more)
wasm/: .gitignore  BENCHMARK.md  CLAUDE-OLD.md  CLAUDE.md  COMPREHENSIVE_TESTING_SUMMARY.md  Cargo.toml  PERFORMANCE_OPTIMIZATIONS.md  PHASE_A_BENCHMARK.md  README-TESTBED-BATCH.md  TEST_SETUP.md  analyze-svg-differences.py  analyze-svg-paths.ps1  build.rs  compare-svgs.html  convert_images.bat  convert_images.sh  debug_checkerboard.rs  debug_checkerboard_background.rs  debug_checkerboard_detailed.rs  debug_dot_failures.rs  debug_pirate_flag.rs  debug_tolerance_1.rs  integration_testing_summary.md  phase_a_test.rs  rebuild-wasm.ps1  rebuild-wasm.sh  rust-toolchain.toml  test-algorithms-enhanced.bat  test-algorithms.bat  test-artistic-effects.bat  test-artistic-effects.sh  test-line-tracing.bat  test_cli.rs  test_runner.bat  test_runner.sh  trace-low-spec.md  vec2art-config-dump-guardrails.md  vec2art_next_steps.md
wasm/.cargo/: config.toml
wasm/debug/: debug_checkerboard.rs  debug_checkerboard_background.rs  debug_checkerboard_detailed.rs  debug_dot_failures.rs  debug_etf_fdog.rs  debug_flow_detailed.rs  debug_flow_tracing.rs  debug_milestone2_quality.rs  debug_pirate_flag.rs  debug_tolerance_1.rs
wasm/docs/: COMPREHENSIVE_TESTING_SUMMARY.md  DOT_MAPPING_DEVELOPMENT.md  RAYON_MIGRATION_STATUS.md  SVELTEKIT_INTEGRATION.md  SVG_DOTS_DEMO.md  centerline_tracing_cleanup_playbook.md  centerline_tracing_diagnostics_and_fixes.md  dot_mapping_api.md  dot_mapping_examples.md  dot_mapping_migration.md  dot_mapping_performance.md  dot_mapping_styles.md  superpixel_research.md
wasm/examples/: benchmark.rs  optimized_svg_demo.rs  test_conversion.rs
wasm/examples/images_out/: trace_low_stats.csv
wasm/examples/outputs/: README.md  report.md
wasm/examples/performance_reports/: summary_report.txt
wasm/scripts/: INTERACTIVE_TEST_GUIDE.md  README.md  build-wasm-mt.ps1  build-wasm-mt.sh  build-wasm-parallel.bat  build-wasm.ps1  build-wasm.sh  test-backends-auto.bat  test-backends-interactive.bat  test-dot-mapping-auto.bat  test-dot-mapping-interactive.bat  test-dot-mapping.bat  test-line-tracing.bat  test-wasm-mt.sh  test-wasm.sh
wasm/src/: benchmarks.rs  error.rs  image_utils.rs  lib.rs  memory_monitor.rs  svg_builder.rs  zero_copy.rs
wasm/src/algorithms/: README.md  edge_detector.rs  geometric_fitter.rs  mod.rs  path_tracer.rs  vtracer_wrapper.rs
wasm/src/performance/: gpu_acceleration.rs  mod.rs  parallel_edge_detector.rs  parallel_geometric_fitter.rs  parallel_path_tracer.rs
wasm/src/utils/: color.rs  convolution.rs  geometry.rs  mod.rs
wasm/tests/: integration_tests.rs  test_image.py
wasm/tests/rust/: create_test_image.rs  test_cli.rs  test_dot_pipeline.rs  test_milestone2_runner.rs
wasm/vectorize-cli/: Cargo.toml
wasm/vectorize-cli/benches/: cli_bench.rs
wasm/vectorize-cli/src/: comprehensive_benchmark.rs  main.rs  phase_a_benchmark.rs  ssim.rs  svg_analysis.rs
wasm/vectorize-core/: --help  Cargo.toml
wasm/vectorize-core/benches/: vectorization_bench.rs
wasm/vectorize-core/src/: algorithms.rs  config.rs  config_builder.rs  config_immutable.rs  edge_case_tests.rs  error.rs  execution.rs  lib.rs  phase_a_simple_test.rs  preprocessing.rs  preset_integration_tests.rs  svg.rs  svg_gradients.rs  telemetry.rs  telemetry_integration_tests.rs
wasm/vectorize-core/src/algorithms/: adaptive_dots.rs  background.rs  color_processing.rs  dot_styles.rs  dots.rs  dots_optimized.rs  edges.rs  etf.rs  fit.rs  gradient_detection.rs  gradients.rs  hand_drawn.rs  image_analysis.rs  logo.rs  mod.rs  path_utils.rs  primitives.rs  regions.rs  simd_color.rs  svg_dots.rs  trace.rs  trace_low.rs
wasm/vectorize-core/src/fills/: gradients.rs  gradients_tests.rs  mod.rs
wasm/vectorize-core/src/gpu/: algorithm_selector.rs  device.rs  mod.rs  processor.rs
wasm/vectorize-core/src/integration_tests/: mod.rs  performance_validation.rs  phase_ab_pipeline.rs  preset_integration.rs  quality_measurement.rs  simple_integration_test.rs
wasm/vectorize-core/src/parameters/: audit.rs  codegen.rs  mod.rs  registry.rs  tests.rs  types.rs  validation.rs
wasm/vectorize-core/src/performance/: memory_pool.rs  mod.rs  parallel_utils.rs  profiler.rs  simd_ops.rs  (+1 more)
wasm/vectorize-core/tests/: dot_styles_integration_test.rs  dots_backend_integration_test.rs  dots_integration_tests.rs  etf_fdog_test.rs  integration_diversity_tests.rs  integration_performance_test.rs  integration_test.rs  new_params_test.rs  performance_validation.rs  svg_dots_integration_test.rs  test_assets.rs
wasm/vectorize-wasm/: Cargo.toml  README.md  build.rs
wasm/vectorize-wasm/.cargo/: config.toml
wasm/vectorize-wasm/examples/: browser-demo.html  node-example.js
wasm/vectorize-wasm/pkg/: vectorize_wasm.d.ts  vectorize_wasm.js  vectorize_wasm_bg.wasm.d.ts
wasm/vectorize-wasm/pkg-bundler/: .gitignore
wasm/vectorize-wasm/src/: capabilities.rs  error.rs  gpu_backend.rs  lib.rs  processing_manager.rs  threading.rs  type_generation.rs  unified_config.rs  utils.rs  vectorizer_refactored.rs  wasm_config.rs
(+668 files in other folders)
