[package]
name = "vec2art"
version = "0.1.0"
authors = ["Vec2Art Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/vec2art"
description = "WebAssembly module for converting raster images to SVG vector graphics"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
imageproc = "0.25"
kurbo = "0.11"
svg = "0.17"
web-sys = { version = "0.3", features = [
    "console",
    "Performance",
    "Window",
] }
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
log = "0.4"
console_log = "1.0"
thiserror = "2.0"
palette = "0.7"
nalgebra = "0.33"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }

# Optional: smaller allocator for production
wee_alloc = { version = "0.4", optional = true }

# Future: parallel processing support
# wasm-bindgen-rayon = { version = "1.0", optional = true }
# rayon = { version = "1.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"

[profile.release]
opt-level = "z"          # Optimize for size
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Single codegen unit for better optimization
strip = true            # Strip symbols
panic = "abort"         # Smaller binary, no unwinding

[profile.dev]
opt-level = 1           # Some optimization even in dev for reasonable performance

[profile.wasm-dev]
inherits = "dev"
opt-level = 2           # Better performance during development

[features]
default = ["console_error_panic_hook"]
production = ["wee_alloc"]
# parallel = ["wasm-bindgen-rayon", "rayon"]