[workspace]
members = [
    "vectorize-core",
    "vectorize-cli", 
    "vectorize-wasm"
]
resolver = "2"

[workspace.dependencies]
# Core image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff", "bmp", "gif", "avif"] }
imageproc = "0.25"  # Suzuki-Abe contour tracing algorithm
rayon = "1.8"
nalgebra = { version = "0.33", default-features = false }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
regex = "1.10"
once_cell = "1.19"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"

# Phase B refinement dependencies
resvg = "0.43"              # SVG rasterization
tiny-skia = "0.11"          # Rendering backend
palette = "0.7"             # Lab colorspace and ΔE calculations
dssim = "3.3"              # SSIM computation

# WebAssembly support
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# Development dependencies
criterion = { version = "0.5", features = ["html_reports"] }
wasm-bindgen-test = "0.3"
serde-wasm-bindgen = "0.6"

[profile.release]
# Optimize for performance (LTO disabled for WASM compatibility)
opt-level = 3
lto = false
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true