[package]
name = "vectorize-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for testing and benchmarking vectorize-core"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/vec2art"

[[bin]]
name = "vectorize-cli"
path = "src/main.rs"

[[bin]]
name = "test-milestone2"
path = "../tests/rust/test_milestone2_runner.rs"

[[bin]]
name = "debug-etf-fdog"
path = "../debug/debug_etf_fdog.rs"

[[bin]]
name = "debug-flow-tracing"
path = "../debug/debug_flow_tracing.rs"

[[bin]]
name = "debug-flow-detailed"
path = "../debug/debug_flow_detailed.rs"

[[bin]]
name = "debug-milestone2-quality"
path = "../debug/debug_milestone2_quality.rs"

[[bin]]
name = "test_cli"
path = "../tests/rust/test_cli.rs"

[[bin]]
name = "debug-dot-failures"
path = "../debug/debug_dot_failures.rs"

[[bin]]
name = "debug-pirate-flag"
path = "../debug/debug_pirate_flag.rs"

[[bin]]
name = "debug-checkerboard"
path = "../debug/debug_checkerboard.rs"

[[bin]]
name = "debug-checkerboard-bg"
path = "../debug/debug_checkerboard_background.rs"

[[bin]]
name = "debug-checkerboard-detailed"
path = "../debug/debug_checkerboard_detailed.rs"

[[bin]]
name = "debug-tolerance-1"
path = "../debug/debug_tolerance_1.rs"

[dependencies]
# Core vectorization library
vectorize-core = { path = "../vectorize-core" }

# CLI framework
clap = { workspace = true }

# Image processing
image = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Performance
rayon = { workspace = true }

# SVG and image comparison
resvg = "0.44"
tiny-skia = "0.11"
usvg = "0.44"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.8"

[[bench]]
name = "cli_bench"
harness = false